--- a/src/RatingStudio.Avalonia/MainWindow.axaml
+++ b/src/RatingStudio.Avalonia/MainWindow.axaml
@@ -2,7 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:RatingStudio.Avalonia.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="1200" Height="800" 
         x:Class="RatingStudio.Avalonia.MainWindow"
+        WindowStartupLocation="CenterScreen"
         Title="RatingStudio.Avalonia">
+        <views:AggregatedDataRankingView/>
 </Window>
