--- a/src/RatingStudio.Avalonia/MainWindow.axaml
+++ b/src/RatingStudio.Avalonia/MainWindow.axaml
@@ -3,10 +3,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:RatingStudio.Avalonia.Views"
+        xmlns:viewModels="clr-namespace:RatingStudio.Avalonia.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="1200" Height="800" 
         x:Class="RatingStudio.Avalonia.MainWindow"
         WindowStartupLocation="CenterScreen"
         Title="RatingStudio.Avalonia">
-        <views:AggregatedDataRankingView/>
+        <Design.DataContext>
+                <viewModels:MainViewModel/>
+        </Design.DataContext>
+        
+        <views:AggregatedDataRankingView />
 </Window>
