--- a/src/RatingStudio.Avalonia/MainWindow.axaml
+++ b/src/RatingStudio.Avalonia/MainWindow.axaml
@@ -13,5 +13,5 @@
                 <viewModels:MainViewModel/>
         </Design.DataContext>
         
-        <views:AggregatedDataRankingView />
+        <views:AggregatedDataRankingView DataContext="{Binding AggregatedDataRankingViewModel}"/>
 </Window>
