--- a/src/RatingStudio.Avalonia/Views/AggregatedDataRankingView.axaml
+++ b/src/RatingStudio.Avalonia/Views/AggregatedDataRankingView.axaml
@@ -32,9 +32,22 @@
             <DataGrid
                 Grid.Column="1"
                 Height="670"
+                Items="{Binding UniversityRating}"
+                IsReadOnly="True"
+                AutoGenerateColumns="False"
                 Margin="10">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Название"/>
+                    <DataGridTextColumn Width="250" Header="Название" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Ранг" Binding="{Binding Rank}"/>
+                    <DataGridTextColumn Header="ARWU" Binding="{Binding ARWU}"/>
+                    <DataGridTextColumn Header="QS" Binding="{Binding QS}"/>
+                    <DataGridTextColumn Header="THE" Binding="{Binding THE}"/>
+                    <DataGridTextColumn Header="ScimagoIR" Binding="{Binding ScimagoIR}"/>
+                    <DataGridTextColumn Header="NTU" Binding="{Binding NTU}"/>
+                    <DataGridTextColumn Header="URAP" Binding="{Binding URAP}"/>
+                    <DataGridTextColumn Header="CWTS" Binding="{Binding CWTS}"/>
+                    <DataGridTextColumn Header="USNews" Binding="{Binding USNews}"/>
+                    <DataGridTextColumn Header="MosIUR" Binding="{Binding MosIUR}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
